
 * new: media-sound/jack2: add a 2.23.1.ebuild (from tarball)

 * upd: media-sound/jack2:
 ** 2.9999: adjust for latest ladi-jack2
 ** 2.9999: mask stable arches so that 2.23.1 ebuild gets into effect by default

 * new: media-sound/jack-tools-9999.ebuild: LADI version of media-sound/jack-example-tools

 * new: media-sound/catroof

== newstable: May 2, 53 (2023)

 * Python 3.11 updates

 ** upd: media-sound/jack_mixer-17
 ** new: media-sound/jack_mixer-9999

 * upd ladish:

 ** new: media-sound/ladish-1_p20230501
 ** del: media-sound/ladish-1-r3
 ** upstream update of README and its rename to README.adoc

== newstable: Apr 19, 53 (2023)

 * new: asciidoc-9999.ebuild +
   This ebuild provides ladoc-py variant of asciidoc
   Two modifications against upstream asciidoc-py are maintained:

 ** Support for docinfo-header.html
 ** ladi theme

 * qmidiarp-0.6.5.ebuild updated to EAPI=8
 * new: qmidiarp-9999.ebuild

 * upd: media-sound/jackdbus

 ** jackdbus-2.22.1.ebuild
 *** Restore git revision display in the log file

 * upd: media-sound/ladish

 ** ladish-1-r3.ebuild & ladish-1.9999.ebuild
 *** ladish_control: fix py3 exception handling
 ** ladish-9999.ebuild
 *** remove (stable) keywords

== newebuild: Feb 18, 53 (2023)

 * new: jack2-2.22.1.ebuild

 ** jack_get_version_string() now reports GIT_VERSION
 ** Change default of self-connect-mode to 'e'

== newstable: Feb 09, 53 (2023)

 * new: dev-lang/faust

 ** faust-2.41.1.ebuild

 * new: media-plugins/x42-plugins
 ** x42-plugins-99999999.ebuild

 * new: media-sound/gmidimonitor

 ** gmidimonitor-9999.ebuild

 * upd: media-sound/jack2

 ** jack2-2.21.0.ebuild
 ** jack2-2.22.0.ebuild
 ** jack2-2.9999.ebuild
 ** git src url adjusted to github.com/LADI one, git.nedk.org is down
 ** jack2-2.x codebase incorporates jackaudio.org jack2-1.9.x codebase.
    For LADIOS, media-sound/jack2 is now jack2-2.x, the ladi-jack2 variants
 ** jackdbus is now packaged as media-sound/jackdbus